<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools">

    <data class="PromotionsBinding">

        <variable
            name="viewModel"
            type="com.rideaustin.ui.drawer.promotions.PromotionsViewModel" />
    </data>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            style="@style/LinearLayout.Base"
            android:background="@color/app_screen_background"
            android:paddingTop="10dp"
            android:paddingBottom="10dp"
            android:paddingLeft="24dp"
            android:paddingRight="24dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@android:color/white"
                android:gravity="center"
                android:orientation="vertical"
                android:paddingBottom="10dp"
                android:paddingTop="21dp">

                <TextView
                    android:id="@+id/promoDescriptionTextView"
                    style="@style/RATextView.MontserratLight.Default"
                    android:paddingBottom="@dimen/activity_horizontal_margin"
                    android:text="@string/promo_description" />

                <EditText
                    android:id="@+id/promoCode"
                    style="@style/EditText.LeaveComment"
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    android:layout_marginBottom="@dimen/default_margin"
                    android:layout_marginTop="@dimen/default_margin"
                    android:hint="@string/promo_hint"
                    android:inputType="text"
                    android:maxLines="1"
                    android:text="@={viewModel.promoCode}"
                    android:paddingLeft="10dp" />

                <Button
                    android:id="@+id/apply"
                    style="@style/Button.RoundedGreyButton"
                    android:layout_marginBottom="@dimen/activity_top_margin"
                    android:layout_marginLeft="15dp"
                    android:layout_marginRight="15dp"
                    android:enabled="false"
                    android:text="@string/apply" />

            </LinearLayout>

            <LinearLayout
                android:id="@+id/inviteFriendsBlock"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:background="@android:color/white"
                android:gravity="center"
                android:orientation="vertical"
                android:paddingBottom="20dp"
                android:paddingTop="24dp"
                android:visibility="gone"
                tools:visibility="visible">

                <ImageView
                    android:layout_width="96dp"
                    android:layout_height="96dp"
                    android:layout_marginBottom="20dp"
                    android:src="@drawable/icn_discounts_icon" />

                <TextView
                    style="@style/RATextView.MontserratLight.Wrap"
                    android:layout_marginBottom="@dimen/basic_widget_margin"
                    android:text="@string/text_want_referral_discounts"
                    android:textColor="@color/black"
                    android:textSize="18sp" />

                <Button
                    android:id="@+id/inviteFriends"
                    style="@style/Button.RoundedBlueButton.RoundedTransparentButton"
                    android:layout_width="195dp"
                    android:layout_height="wrap_content"
                    android:text="@string/text_invite_your_friends"
                    android:textColor="@color/tint_color"
                    android:textSize="12sp" />

            </LinearLayout>

            <RelativeLayout
                android:id="@+id/credits_balance"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:background="@android:color/white"
                android:padding="15dp">

                <ImageView
                    android:layout_width="42dp"
                    android:layout_height="42dp"
                    android:id="@+id/imageView3"
                    android:src="@{viewModel.balanceIcon}"
                    tools:src="@drawable/icn_credits_available" />

                <TextView
                    android:id="@+id/textView5"
                    style="@style/RATextView.MontserratLight.Wrap"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:layout_marginStart="15dp"
                    android:layout_toEndOf="@+id/imageView3"
                    android:text="Credits Balance"
                    android:textSize="14sp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentEnd="true"
                    android:layout_centerVertical="true"
                    android:layout_marginEnd="41dp"
                    android:textAppearance="@style/RATextView.MontserratRegular"
                    tools:text="$50"
                    android:text="@{viewModel.balanceValue}"
                    android:textSize="20sp"
                    android:textColor="@{viewModel.balanceValueColor}"
                    tools:textColor="@color/teal_A400"
                    android:id="@+id/balance_value" />

                <ImageView
                    android:layout_width="45dp"
                    android:layout_height="45dp"
                    android:layout_alignBottom="@+id/imageView3"
                    android:layout_alignStart="@+id/balance_value"
                    android:layout_marginStart="41dp"
                    android:layout_alignParentEnd="true"
                    android:scaleType="fitCenter"
                    android:src="@drawable/arrow_gray" />

            </RelativeLayout>

        </LinearLayout>

    </ScrollView>


</layout>