<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="money">$%s</string>
    <string name="text_date_delimiter">" - "</string>
    <string name="text_subject">Production Defect Report</string>

    <string name="error_unknown">We are experiencing technical difficulties</string>
    <string name="network_error">Something went wrong. Please check network connection.</string>
    <string name="location_timeout_error">Unable to identify your location.</string>
    <string name="error_generic">Something went wrong.</string>
    <string name="send_message_msg">Your message has been sent</string>
    <string name="send_message_title">Success</string>
    <string name="send_message_fail">Your message has failed</string>
    <string name="empty_message_error">Message can\'t be empty</string>
...
        <item quantity="one">%d star</item>
        <item quantity="other">%d stars</item>
    </plurals>

    <string name="terms_invalid">Can\'t load Terms and Conditions. Please contact support</string>
    <string name="terms_load_error">Failed loading Terms and Conditions. Please retry</string>
    <string name="google_map">Google Map</string>
    <string name="car_marker">Car Marker</string>
    <string name="pickup_marker">Pickup Marker</string>
    <string name="destination_marker">Destination Marker</string>
    <string name="prev_ride_marker">Prev Ride Marker</string>
    <string name="next_ride_marker">Next Ride Marker</string>
    <string name="eta_marker">Eta Marker:</string>
...
